# ts-timetracker

./: .gitignore  .ts-timetracker.cfg  .ts-timetracker.conf  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  main.cpp
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
application/controllers/: CMakeLists.txt  Makefile  TS_Application.cpp  TS_Base.cpp  TS_Command.cpp  TS_CommandDelegator.cpp  TS_CommandExport.cpp  TS_CommandHelp.cpp  TS_CommandList.cpp  TS_CommandRemove.cpp  TS_CommandSave.cpp  TS_CommandShowConfig.cpp  TS_CommandTimestamp.cpp  TS_CommandTimestampStart.cpp  TS_CommandTimestampStop.cpp  TS_CommandTouch.cpp  TS_CommandUse.cpp  TS_Info.cpp
application/controllers/headers/: TS_Application.h  TS_Base.h  TS_Command.h  TS_CommandDelegator.h  TS_CommandExport.h  TS_CommandHelp.h  TS_CommandList.h  TS_CommandRemove.h  TS_CommandSave.h  TS_CommandShowConfig.h  TS_CommandTimestamp.h  TS_CommandTimestampStart.h  TS_CommandTimestampStop.h  TS_CommandTouch.h  TS_CommandUse.h
application/models/: CMakeLists.txt  Makefile  TS_Model.cpp  TS_ModelFilesystem.cpp
application/models/headers/: TS_IModel.h  TS_Model.h  TS_ModelFilesystem.h
application/views/: CMakeLists.txt  TS_View.cpp  TS_ViewTerminal.cpp
application/views/headers/: TS_View.h  TS_ViewTerminal.h
config/: CMakeLists.txt  Makefile  TS_ConfigReader.cpp  TS_ConfigReader.h
controllers/: TS_CommandDelegator.cpp  TS_Info.cpp
controllers/headers/: TS_Base.h  TS_Info.h
factories/: CMakeLists.txt  TS_FactoryCommand.cpp  TS_FactoryView.cpp
factories/headers/: TS_FactoryCommand.h  TS_FactoryView.h
helpers/: CMakeLists.txt  Makefile  TS_FactoryCommand.cpp  TS_Helper.cpp  TS_Info.cpp
helpers/headers/: TS_Helper.h  TS_Info.h  VariadicTable.h
src/: main.cpp
src/application/controllers/: CMakeLists.txt  TS_Application.cpp  TS_CommandConfig.cpp  TS_CommandHelp.cpp  TS_CommandList.cpp  TS_CommandProjects.cpp  TS_CommandSave.cpp  TS_CommandTimes.cpp  TS_CommandTimestampStart.cpp  TS_CommandTouch.cpp
src/application/controllers/headers/: TS_Application.h  TS_Command.h  TS_CommandConfig.h  TS_CommandExport.h  TS_CommandList.h  TS_CommandProjects.h  TS_CommandRemove.h  TS_CommandSave.h  TS_CommandTimes.h  TS_CommandTimestampStart.h  TS_CommandTouch.h
src/application/models/: CMakeLists.txt
src/application/models/headers/: TS_ModelFilesystem.h
src/application/views/: TS_ViewTerminal.cpp
src/application/views/headers/: TS_IView.h
src/config/: CMakeLists.txt
src/factories/: TS_FactoryCommand.cpp  TS_FactoryView.cpp
src/factories/headers/: TS_FactoryCommand.h
src/helpers/headers/: TS_Info.h
tests/: CMakeLists.txt  TS_UnitTest.cpp  TS_UnitTest_CmdExport.cpp  TS_UnitTest_CmdHelp.cpp  TS_UnitTest_CmdRemove.cpp  TS_UnitTest_CmdSave.cpp  TS_UnitTest_CmdTimestamp.cpp  TS_UnitTest_CmdTouch.cpp  TS_UnitTest_CmdUse.cpp  TS_UnitTest_Config.cpp  TS_UnitTest_ModelFilesystem.cpp
